[package]
name = "hyperloglog_kmer_counter"
version = "0.1.0"
edition = "2021"

description = "Estimate unique k-mers from genomic sequences using HyperLogLog++"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[dependencies]
flate2 = "1.0"
needletail = "0.6"
hyperloglogplus = "0.4"
clap = { version = "4.5", features = ["derive"] }
